--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Simple List app</title>
 </head>
 <body>
+<div id="root"></div>
 <script src="./dist/bundle.js"></script>
+
 </body>
 </html>
